--- a/loan.html
+++ b/loan.html
@@ -25,8 +25,9 @@
     </div>
     <div class="button">
     <button onclick="calculateLoan()">Calculate</button>
-    <button type="reset">Reset</button>
+    <button onclick="reset()">Reset</button>
     </div>
+    
     <h2 id="monthlyPay"></h2>
     <h2 id="totalPay"></h2>
     <h2 id="totalInterest"></h2>
